# website

./: .eslintrc.json  .gitignore  next.config.js  package-lock.json  package.json  prettier.config.js
.firebase/: hosting.cHVibGlj.cache
.next/: build-manifest.json  trace
.next/cache/: next-server.js.nft.json
.next/cache/eslint/: .cache_1012otm
.next/cache/webpack/client-development/: 0.pack  1.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  4.pack  5.pack  6.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
.next/cache/webpack/client-development-fallback/: index.pack
.next/cache/webpack/client-production/: 1.pack  2.pack  index.pack  index.pack.old
.next/server/: pages-manifest.json
.next/server/pages/: _app.js  _document.js  _error.js  index.js
.next/static/chunks/: webpack.js
.next/static/webpack/: webpack.9bf79aad21e7a1e6.hot-update.js
components/: allegroGridItem.js  gridItem.js  ionGridItem.js  knightGridItem.js  navbar.js  section.js  slangGridItem.js  themebutton.js
components/layouts/: child.js  main.js
lib/: theme.js
pages/: _app.js  _document.js  index.css  index.js  other.js  projects.js  resume.js
pages/other/: keyboard.js  linux.js  naruto.js  proofs.js  ship.js  unplugged.js
pages/projects/: allegro.js  ion.js  knight.js  pixcell.js  slang.js
pages/projects/pixcell/: hello.cpp
pixcell-lib/: Cargo.toml
pixcell-lib/src/: cell.rs  lib.rs
public/wasm/: hello.js  hello.wasm  package.json  pixcell_lib.d.ts  pixcell_lib.js  pixcell_lib_bg.wasm  pixcell_lib_bg.wasm.d.ts
(+23 files in other folders)
