[package]
name = "pixcell-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
rand = "0.8.5"
wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib"]
